--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ForgetPasswordAddNewPass.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ForgetPasswordAddNewPass.cshtml
@@ -3,15 +3,35 @@
     ViewBag.Title = "ForgetPasswordAddNewPass";
     string phone = Model.Phone;
     string rsphone = Model.Phone.Substring(phone.Length - 3);
-    
-}
-<section class="container">
 
-    <h3 class="text-center">ForgetPassword <span class=""></span></h3>
+}
+
+<!--scroll-top-Button-->
+<button onclick="topFunction()" id="scroll-top-Btn" title="Go to top">Top</button>
+<!-- Banner-->
+<img src="~/Image/Banner_Pic/User/register_banner.jpg" class="img-fluid" alt="Responsive image">
+<!-- breadcrumb-->
+<div class="breadcrumb-containt">
+    <div class="btn-group btn-breadcrumb breadcrumb-primary">
+        <a href="@Url.Action("Index", "Index")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+        <a href="@Url.Action("Index", "Index")" class="btn btn-primary breadcrumb-link ">Home</a>
+        <div class="btn btn-info c-info breadcrumb-link"> Forget Password</div>
+    </div>
+</div>
+<br />
+<!-- Main Info -->
+<section class="container">
     <hr />
-    
     <div class="card p-5 col-md-4 m-auto">
-        <label for="old_password" class="label-text ">PhoneNumber: XXXXXXXXXXX@*@(rsphone*@</label>
+        <label for="old_password" class="label-text " style="font-weight: bold">
+            @{ 
+                var phoneTemp = Model.Phone;
+                var First = phoneTemp.Substring(0, 2);
+                var Last = phoneTemp.Substring(phoneTemp.Length - 3, 3);
+                var EncryptPhone = First + "XXXXX" + Last;
+            }
+        PhoneNumber: @EncryptPhone
+        </label>
         @using (Html.BeginForm("ForgetPasswordAddNewPass", "UserAccount", FormMethod.Post, new { @class = "well form-horizontal  " }))
         {
             <div class="form-group d-none">
@@ -31,7 +51,6 @@
             </div>
 
             <div class="control-group">
-
                 <div class="controls">
                     <input class="form-control" type="text" name="old_phone">
                 </div>
@@ -39,24 +58,26 @@
             </div>
 
             <div class="form-group">
-                <label for="new_password" class="control-label">New Password</label>
+                <label for="new_password" class="control-label" style="font-weight: bold">New Password</label>
                 @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
             </div>
             <span class=" text-danger">@ViewBag.ErrorNew_password</span>
             <div class="control-group">
-                <label for="confirm_password" class="label-text ">Confirm Password</label>
+                <label for="confirm_password" class="label-text " style="font-weight: bold">Confirm Password</label>
                 <div class="controls">
                     <input class="form-control" type="password" name="confirm_password">
                 </div>
-
                 <span class=" text-danger">@ViewBag.ErrorConfirm_password</span>
             </div>
 
             <div class="form-group pt-2 text-right">
                 <button type="submit" class="btn btn-default teal">Save changes</button>
             </div>
-
         }
     </div>
 </section>
+
+@section Scripts{
+    <script src="~/Scripts/MyScript/indexFunction.js"></script>
+}
