--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/index.css
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/index.css
@@ -173,6 +173,7 @@ footer {
     left: 100%;
     z-index: 3;
 }
+
 #breadcrumb-topicTitle {
     white-space: nowrap;
     overflow: hidden;
@@ -360,17 +361,24 @@ footer {
     max-width: 60%;
 }
 
-.info-Title {
+.info-Title >a {
     text-transform: lowercase;
     color: darkblue;
 }
+.info-Title > a:hover{
+    text-decoration: none
+}
 
-.info-Name {
+.info-Name > a {
     font-size: 12px;
     color: darkgray;
 }
 
-.info-Title::first-letter {
+    .info-Name > a:hover {
+        text-decoration: none
+    }
+
+.info-Title >a::first-letter {
     text-transform: uppercase;
 }
 
@@ -393,10 +401,14 @@ footer {
     flex-basis: 20%;
 }
 
-.info-topicPoster {
+.info-topicPoster > a {
     text-align: end;
     color: darkblue;
 }
+
+    .info-topicPoster > a:hover {
+        text-decoration: none
+    }
 
 .category-topic-info {
     display: flex;
@@ -445,9 +457,9 @@ footer {
     text-decoration: none;
 }
 
-    .edit-btn-href > img {
-        max-width: 20px;
-    }
+.edit-btn-href > img {
+    max-width: 20px;
+}
 
 #topic-header-containt {
     padding-top: 1%;
@@ -547,6 +559,14 @@ footer {
     max-width: 15%;
 }
 
+    .ListGroup-topicPostby > a {
+        color: gray;
+    }
+
+        .ListGroup-topicPostby > a:hover {
+            text-decoration: none;
+        }
+
 .ListGroup-mainInfo-containt {
     max-width: 95%;
     margin: auto;
@@ -610,15 +630,35 @@ footer {
 
 /* -------------------------- This code for Responsive  --------------------------*/
 /* Index page*/
+@media only screen and (max-width: 768px) {
+    .category-icon-containt > img {
+        width: 25px;
+        margin-left: 10px;
+        margin-top: 20px;
+    }
+}
 @media only screen and (max-width: 750px) {
     .slogan-containt {
         padding: 0px;
     }
 }
 
+@media only screen and (max-width: 600px) {
+    .category-icon-containt > img {
+        display: none
+    }
+}
 @media only screen and (max-width: 500px) {
     .slogan-containt {
         font-size: 20px;
+    }
+    .category-title {
+        flex-basis: 50%;
+        max-width: 50%;
+    }
+    .Topic-info {
+        flex-basis: 50%;
+        max-width: 50%;
     }
 }
 
@@ -643,6 +683,7 @@ footer {
 
     .category-containt {
         display: block;
+        border: 1px solid #d7edfc;
     }
 
     .category-title {
