--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/style.css
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/style.css
@@ -14,6 +14,113 @@
     border-radius: 4px;
 }
 
-#scroll-top-Btn:hover {
-    background-color: darkgreen;
+    #scroll-top-Btn:hover {
+        background-color: darkgreen;
+    }
+/*  This is for _Layout */
+.link-register {
+    color: white;
+}
+
+    .link-register:hover {
+        color: black;
+        text-decoration: none;
+    }
+
+.getting-layout {
+    transition: .5s ease;
+    color: white;
+    font-size: 17px
+}
+
+    .getting-layout:hover {
+        color: yellow;
+        box-shadow: 0 0 0 2px yellow;
+        transition: .5s ease;
+    }
+/*This code for  Account Information form*/
+.columns_2 {
+    text-align: right;
+    font-weight: bold;
+    padding-right: 0px;
+}
+/* This code for OtherDetail PartialView*/
+.modal-group {
+    position: relative;
+}
+
+
+.user-status {
+    color: maroon;
+    font-size: 29px;
+    line-height: 45px;
+    text-align: center;
+    text-shadow: 0 1px 1px #fff;
+    padding-top: 20px;
+}
+
+#sub {
+    font-size: 20px;
+}
+
+.other-info-title {
+    text-align: right;
+    font-weight: bold;
+}
+
+.img-avatar {
+    position: absolute;
+    left: 40%;
+    top: 2%;
+    z-index: 999;
+    border: 1px solid #b2b0b0
+}
+@media screen and (max-width: 575px) {
+    .other-info {
+        padding-left: 0px !important;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+@media screen and (max-width: 425px) {
+    .user-status {
+        font-size: 27px;
+    }
+    #sub {
+        font-size: 16px;
+    }
+}
+@media screen and (max-width: 400px) {
+    .img-avatar {
+        left: 38%;
+    }
+    .user-status {
+        font-size: 24px;
+    }
+}
+@media screen and (max-width: 375px) {
+    .user-status {
+        font-size: 21px;
+    }
+    #sub {
+        font-size: 14px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .other-info-title {
+        font-size: 14px;
+    }
+    .other-info {
+        font-size: 14px;
+    }
+    .img-avatar {
+        left: 34%;
+    }
+    .user-status {
+        font-size: 18px;
+    }
+    #sub {
+        font-size: 22px;
+    }
 }
