--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
@@ -42,7 +42,10 @@
                 <div class="form-group hide">
                     @Html.LabelFor(model => model.Acc_ID, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.TextBoxFor(model => model.Acc_ID, new { @Value = 1, htmlAttributes = new { @class = "form-control" } })
+                        @{ 
+                            var ID = Session["ID"].ToString();
+                        }
+                        @Html.TextBoxFor(model => model.Acc_ID, new { @Value = ID, htmlAttributes = new { @class = "form-control" } })
                     </div>
                 </div>
 
