--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ChangePassword.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ChangePassword.cshtml
@@ -2,7 +2,20 @@
 @{
     ViewBag.Title = "ChangePassword";
 }
-<section class="container">
+<!--scroll-top-Button-->
+<button onclick="topFunction()" id="scroll-top-Btn" title="Go to top">Top</button>
+<!-- Banner-->
+<img src="~/Image/Banner_Pic/User/register_banner.jpg" class="img-fluid" alt="Responsive image">
+<!-- breadcrumb-->
+<div class="breadcrumb-containt">
+    <div class="btn-group btn-breadcrumb breadcrumb-primary">
+        <a href="@Url.Action("Index", "Index")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+        <a href="@Url.Action("Index", "Index")" class="btn btn-primary breadcrumb-link ">Home</a>
+        <div class="btn btn-info c-info breadcrumb-link"> Change Password</div>
+    </div>
+</div>
+<!-- Main Info -->
+<section class="container" style="margin-top: 30px">
     @using (Html.BeginForm("ChangePassword", "UserAccount", FormMethod.Post, new { @class = "well form-horizontal col-md-4 m-auto card p-5" }))
     {
         <h3 class="text-center">Change Password <span class=""></span></h3>
@@ -45,3 +58,6 @@
 
     }
 </section>
+@section Scripts{
+    <script src="~/Scripts/MyScript/indexFunction.js"></script>
+}
