--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ForgetPassword.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/ForgetPassword.cshtml
@@ -1,25 +1,35 @@
 ﻿@model Dr4rum_eProjectIII.Models.Account
-@{
-                /**/
 
-                ViewBag.Title = "ForgetPassword";
-}
-
-<h2>ForgetPassword</h2>
-@using (Html.BeginForm("ForgetPassword", "UserAccount", FormMethod.Post, new { @class = "well form-horizontal col-md-4 m-auto card p-5" }))
+<!--scroll-top-Button-->
+<button onclick="topFunction()" id="scroll-top-Btn" title="Go to top">Top</button>
+<!-- Banner-->
+<img src="~/Image/Banner_Pic/User/register_banner.jpg" class="img-fluid" alt="Responsive image">
+<!-- breadcrumb-->
+<div class="breadcrumb-containt">
+    <div class="btn-group btn-breadcrumb breadcrumb-primary">
+        <a href="@Url.Action("Index", "Index")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+        <a href="@Url.Action("Index", "Index")" class="btn btn-primary breadcrumb-link ">Home</a>
+        <div class="btn btn-info c-info breadcrumb-link"> Forget Password</div>
+    </div>
+</div>
+<br />
+<!-- Main Info -->
+@using (Html.BeginForm("ForgetPassword", "UserAccount", FormMethod.Post, new { @class = "well form-horizontal col-md-6 col-lg-4 m-auto card p-5" }))
 {
-    <div class="form-group ">
-        <div class="col-md ">
-            <label>Enter UserName</label>
-            <div class=" input-group">
-                @Html.TextBoxFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control col-12" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger col-12" })
-                <span class="text-danger">@ViewBag.ErrormessageForgetPassword</span>
-            </div>
+    <div class="form-group">
+        <div clas="row" style="font-weight: bold; padding-bottom:10px">Enter Your UserName</div>
+        <div class=" input-group">
+            @Html.TextBoxFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control col-12" } })
+            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger " })
+            <span class="text-danger">@ViewBag.ErrormessageForgetPassword</span>
         </div>
     </div>
 
-    <div class="form-group pt-2 text-right">
+    <div class="form-group">
         <button type="submit" class="btn btn-default teal">Submit</button>
     </div>
+}
+
+@section Scripts{
+    <script src="~/Scripts/MyScript/indexFunction.js"></script>
 }
