--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Login.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Login.cshtml
@@ -7,16 +7,16 @@
     @Html.AntiForgeryToken()
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="Login-info-contain" style="border: 1px solid #b2b0b0; border-radius: 5px">
-        <div class="form-group">
-            @Html.LabelFor(m => m.UserName, new { @class = "control-label" })
-            <div>
+    <div class="Login-info-contain" style="border: 1px solid lightgray; border-radius: 5px; padding: 10px;">
+        <div class="form-group row">
+            <div class="control-label col-md-12 TopicDelete-title">Username</div>
+            <div class="col-12">
                 @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        <div class="form-group row">
+            <div class="control-label col-md-12 TopicDelete-title">Password</div>
             <div class="col-md-10">
                 @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
@@ -26,11 +26,16 @@
     <span class="text-danger">@ViewBag.ErrorMessage</span>
 
     <div class="form-group" style="margin-top: 10px">
-        @Html.ActionLink("ForgetPassword", "ForgetPassword", "UserAccount", null, new { @class = "pt-2 pb-2" })
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Log in" class="btn btn-default" />
-            </div>
+        <div class="row" style="margin-bottom:10px">
+            <div class="col-12">    @Html.ActionLink("ForgetPassword ?", "ForgetPassword", "UserAccount", null, new { @class = "pt-2 pb-2 " })</div>        
         </div>
+        <div class="row">
+            <div class="col-3">
+                <input type="submit" value="Log in" class="btn btn-success" />
+            </div>
+            <div class="col">
+                @Html.ActionLink("Register", "Register", "UserAccount", null, new { @class = "btn btn-secondary" })
+            </div>
+        </div>       
     </div>
 }
